matrix/element/element-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element-ingress
  namespace: matrix
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.ryleycoyote.com"
      secretName: synapse-tls
  rules:
    - host: go.ryleycoyote.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
